# slambook2

ch3/useEigen/: eigenMatrix.cpp
ch3/useEigen/practice/: CMakeLists.txt  eigenMatrix  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/example/: trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/rgbd/: joinMap.cpp
ch5/stereo/: stereoVision.cpp
